--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -86,9 +86,9 @@
 }
 
 .nav__toggler div {
-  width: 2rem;
-  height: 0.2rem;
-  margin: 0.4rem;
+  width: 3rem;
+  height: 3px;
+  margin: 5px;
   background-color: var(--blackpure);
   transition: 0.34s ease-in;
 }
@@ -125,6 +125,8 @@
 
   .nav__toggler {
     display: block;
+    width: 35px;
+    height: 35px;
   }
 
   .nav-list {
@@ -136,13 +138,13 @@
     justify-content: center;
     gap: 3rem;
     width: 100%;
-    height: 93vh;
+    height: 60vh;
     background-color: var(--header-bg);
     transform: translateX(100%);
     transition: 0.5s ease-in;
   }
 
-  .nav-list .nav-list__active {
+  .nav-list.nav-list__active {
     transform: translateX(0);
   }
 }
